...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <Button
        android:id="@+id/fb_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:background="@drawable/fb_disabled"
        android:text="@string/flashback"
        android:textSize="15sp"
...
        app:layout_constraintLeft_toLeftOf="@id/guidelineL10"
        app:layout_constraintRight_toRightOf="@id/guidelineR10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/song_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/curr_page_margin"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit ="marquee_forever"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:scrollHorizontally="true"
        android:textSize="15sp"
        android:textColor="#000000"
        android:text="---"
        android:gravity="center_horizontal"
        app:layout_constraintLeft_toLeftOf="@id/guidelineL10"
        app:layout_constraintRight_toRightOf="@id/guidelineR10"
        app:layout_constraintTop_toBottomOf="@id/fb_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/song_artist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/curr_page_margin"
        android:textSize="15sp"
        android:textColor="#000000"
        android:singleLine="true"
...
        app:layout_constraintTop_toBottomOf="@id/song_artist"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"/>


    <ImageButton
        android:id="@+id/like_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:focusable="false"
        android:padding="@dimen/entry_margin"
        app:layout_constraintRight_toRightOf="@id/guidelineR10"
        app:layout_constraintLeft_toLeftOf="@id/guidelineL10"
        app:layout_constraintTop_toBottomOf="@id/song_album"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintVertical_bias="0.05"/>

    <ImageButton
        android:id="@+id/dislike_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:focusable="false"
        android:padding="@dimen/entry_margin"
        app:layout_constraintRight_toRightOf="@id/guidelineR10"
        app:layout_constraintLeft_toLeftOf="@id/guidelineL10"
        app:layout_constraintTop_toBottomOf="@id/song_album"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintVertical_bias="0.05"/>

    <TextView
        android:id="@+id/location_lab"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/curr_page_margin"
        android:textSize="15sp"
        android:textColor="#000000"
        android:text="@string/location"
...
        app:layout_constraintLeft_toLeftOf="@id/guidelineL10"
        app:layout_constraintTop_toBottomOf="@id/like_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/location_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/curr_page_margin"
        android:paddingVertical="@dimen/curr_page_margin"
        android:textSize="15sp"
        android:textColor="#000000"
...
        app:layout_constraintLeft_toLeftOf="@id/location_txt"
        app:layout_constraintRight_toRightOf="@id/guidelineR10"
        app:layout_constraintTop_toBottomOf="@id/location_lab"
        app:layout_constraintVertical_bias="0.0"/>

    <TextView
        android:id="@+id/time_lab"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/curr_page_margin"
        android:textSize="15sp"
        android:textColor="#000000"
        android:text="@string/time"
...
        app:layout_constraintLeft_toLeftOf="@id/guidelineL10"
        app:layout_constraintTop_toBottomOf="@id/user_lab"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/time_date_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/curr_page_margin"
        android:textSize="15sp"
        android:textColor="#000000"
        android:singleLine="true"
...
        app:layout_constraintRight_toRightOf="@id/guidelineR10"
        app:layout_constraintTop_toBottomOf="@id/user_lab"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"/>

    <TextView
        android:id="@+id/time_clock_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/curr_page_margin"
        android:textSize="15sp"
        android:textColor="#000000"
        android:singleLine="true"
...
