<resources>
    <string name="app_name">Team6FlashbackPlayer</string>
    <string name="flashback">VIBE MODE</string>
    <string name="songs">Songs</string>
    <string name="albusms">Albums</string>
    <string name="curr_playing">Currently Playing</string>
    <string name="no_history">---</string>
    <string name="location">Location:</string>
    <string name="time">Time:</string>
    <string name="loc_req_title">Location Service Request</string>
    <string name="loc_req_txt">Player need your location</string>
    <string name="ok">OK</string>
    <string name="showplaylist">Show Playlist</string>
    <string name="main_activity_title">Player</string>
    <string name="song_activity_title">Songs</string>
...
